# Succinct-Crab-Game

./: .gitignore  README.md
program/: Cargo.toml
script/: Cargo.toml
server/: server.js
web/: index.html  script.js  style.css
