[package]
name = "snake-game-script"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { version = "4.0.0", default-features = false }
sp1-zkvm = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"

[build-dependencies]
sp1-build = "4.0.0"
